update CSS for correct alignment

--- a/app/globals.css
+++ b/app/globals.css
@@ -83,6 +83,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  font-family: 'Times New Roman', Times, serif;
 }
 
 body {
@@ -104,4 +105,47 @@ a {
   html {
     color-scheme: dark;
   }
+}
+
+
+
+.container {
+  display: flex;
+}
+
+.column {
+  flex: 1;
+  padding: 20px;
+  box-sizing: border-box;
+  text-align: center;
+  align-items: flex-start;
+}
+/* 
+#leftColumn {
+  background-color: #f2f2f2;
+}
+
+#rightColumn {
+  background-color: #e6e6e6;
+} */
+
+
+.titl {
+  font-size: 30px;
+  font-weight: bold;
+  color: #000000;
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 70px;
+  font-family: 'times new roman', times, serif;
+}
+
+.cash-amount {
+  font-size: 24px;
+  font-weight: bold;
+  color: #000000;
+  text-align: center;
+  /* margin-top: 20px;
+  margin-bottom: 70px; */
+  font-family: 'times new roman', times, serif;
 }
